--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --collectCoverage"
+    "test": "jest --watchAll --collectCoverage",
+    "dev:build": "tsc",
+    "dev:serve": "nodemon -e js -w lib lib/main.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,21 @@
   },
   "homepage": "https://github.com/ksiwt/clean-architecture-express-contacts#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "@types/pg": "^8.11.2",
+    "express": "^4.18.3",
+    "mongodb": "^6.5.0",
+    "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.11.26",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
